--- a/contact-me.html
+++ b/contact-me.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
+    <title>contact-me.html</title>
 </head>
 <body>
-    <h1>This is index.html</h1>
+    <h1>This is contact-me.html</h1>
 </body>
 </html>
